Design Pattens e relacionamento

--- a/2SEM/1Password/src/main/resources/com/example/password.fxml
+++ b/2SEM/1Password/src/main/resources/com/example/password.fxml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.TextField?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="535.0" prefWidth="590.0" style="-fx-background-color: #5792ff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.example.PasswordController">
+<VBox alignment="CENTER" spacing="20.0" style="-fx-background-color: #DEF9F5;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.PrimaryController">
+    <padding>
+        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+    </padding>
+   <children>
+      <SplitPane dividerPositions="0.5016711229946523" prefHeight="500.0" prefWidth="600.0" style="-fx-background-image: #DEF9F5;">
+        <items>
+          <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="535.0" prefWidth="590.0" style="-fx-background-color: #5792ff;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.example.PasswordController">
    <children>
       <Label layoutX="219.0" layoutY="36.0" text="1PASSWORD" textAlignment="CENTER" textFill="#dfedff">
          <font>
@@ -71,3 +81,23 @@
       </Pane>
    </children>
 </AnchorPane>
+
+               <children>
+                  <ListView fx:id="lista" layoutX="40.0" layoutY="164.0" prefHeight="187.0" prefWidth="214.0" />
+                  <Label layoutX="39.0" layoutY="138.0" text="Chamado">
+                     <font>
+                        <Font name="Bodoni MT" size="18.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="14.0" layoutY="34.0" text="HELP DESK">
+                     <font>
+                        <Font name="AdobeGothicStd-Bold" size="34.0" />
+                     </font>
+                  </Label>
+                  <Button layoutX="65.0" layoutY="372.0" mnemonicParsing="false" onAction="#apagar" style="-fx-background-color: #FF0000;" text="Remover" textFill="WHITE" />
+                  <Button layoutX="164.0" layoutY="372.0" mnemonicParsing="false" onAction="#editar" style="-fx-background-color: #FFFF00;" text="Alterar" />
+               </children></AnchorPane>
+        </items>
+      </SplitPane>
+   </children>
+</VBox>
